--- a/rmarkdown-examples/rmarkdown-example.Rmd
+++ b/rmarkdown-examples/rmarkdown-example.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Lab 00"
 subtitle: "RMarkdown and Paths"
+author: "Luzmarina Garcia"
 date: "2018-01-24"
 output: html_document
 ---
@@ -22,6 +23,10 @@ Write an unordered list of your classes this semester.
 1. Create a link so that when the short course name is clicked it 
    will take you to the course description in the course explorer. 
 1. Make the long title (Statistics Programming Methods) italic.
+
+My courses:
+- [**STAT 385**] (https://courses.illinois.edu/schedule/2018/summer/STAT/385): _Statistics Programming Methods_ 
+
 
 If you need help with syntax, go to the "Help" menu and select the 
 _Markdown Quick Reference_ guide. This will open in the **Help** tab on
